# benchmark-HADCA

./: .gitignore  HDCA.cpp  README.md  derivatives.cpp  main.cpp  meson.build  postproces.m  project.h  testing.cpp  tests.cpp  timing.cpp  utils.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: adjoint.h  assembly.h  body.h  config.h  constants.h  derivatives.h  input.h  ksiCoefs.h  odeint.h  solution.h  timer.h  utils.h
include/task/: F.h  M.h  Phi.h  h.h
misc/: jacobiBuildPerf.cpp  utilsTests.cpp
src/: RHS-odeint.cpp  RHS.cpp  RHSA.cpp  adjoint.cpp  assembly.cpp  body.cpp  derivatives.cpp  input.cpp  ksiCoefs.cpp  solution.cpp  solvers.cpp  timer.cpp  utils.cpp
src/task/: F.cpp  M.cpp  Phi.cpp  h.cpp
